# prelude-file-renamer

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release-drafter.yml  testing.yml
src/: main.rs
