[package]
name = "vision-file-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.3", features = ["suggestions", "derive"] }
glob = "0.3.1"

[dev-dependencies]
tempfile = "3.5.0"
