[package]
name = "vision-file-renamer"
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/pbs-data-solutions/prelude-file-renamer"
repository = "https://github.com/pbs-data-solutions/prelude-file-renamer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["suggestions", "derive"] }
glob = "0.3.1"

[dev-dependencies]
tempfile = "3.5.0"
