[package]
name = "vision-file-renamer"
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/pbs-data-solutions/prelude-file-renamer"
repository = "https://github.com/pbs-data-solutions/prelude-file-renamer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.43", features = ["suggestions", "derive"] }
glob = "0.3.3"

[dev-dependencies]
tempfile = "3.20.0"
tmp-path = "0.1.2"
